--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&family=Noto+Serif:wght@700&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/responsive.css">
+    <link rel="stylesheet" href="CSS/Navstyle.css">
+    <link rel="stylesheet" href="CSS/Navresponsive.css">
     <title>Document</title>
 </head>
 
@@ -26,10 +26,26 @@
             <li><a href="#" class="navItems">Servives</a></li>
             <li><a href="#" class="navItems">About us</a></li>
             <li><a href="#" class="navItems">Contact us</a></li>
-            <li><a href="#" class="navItems navBtn">Sing Up</a></li>
+            <li><a href="#" class="navBtn">Sing Up</a></li>
         </ul>
     </nav>
     <script src="JS/app.js"></script>
+    <main>
+        <div id="mainContainer">
+            <div class="mainContent">
+                <h1>Welcome to our website</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate velit consectetur ad laboriosam.
+                    Modi
+                    deleniti voluptates fugit. Commodi, nulla eos, optio voluptas vel molestiae eum itaque quas illum
+                    soluta
+                    iste.</p>
+                <button class="bodyBtn"><a href="#">Get Started</a></button>
+            </div>
+            <div class="Img">
+                <img id="mainimg" src="img/space1.svg" alt="Space">
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
