--- a/index.html
+++ b/index.html
@@ -87,6 +87,44 @@
         </div>
     </div>
     <script src="JS/form.js"></script>
+
+
+    <!-- Image Gallery -->
+    <div class="services-section">
+        <div class="services-heading">
+            <h1>Check out our services below!</h1>
+        </div>
+        <div class="services">
+            <div class="services-cell">
+                <img src="img/gallery/img1.jpg" alt="" class="services-cell_img">
+                <div class="services-cell_text">Digital Marketing</div>
+            </div>
+            <div class="services-cell">
+                <img src="img/gallery/img2.jpg" alt="" class="services-cell_img">
+                <div class="services-cell_text">Website devlopment</div>
+            </div>
+            <div class="services-cell">
+                <img src="img/gallery/img3.jpg" alt="" class="services-cell_img">
+                <div class="services-cell_text">Videography</div>
+            </div>
+            <div class="services-cell">
+                <img src="img/gallery/img4.jpg" alt="" class="services-cell_img">
+                <div class="services-cell_text">Photography</div>
+            </div>
+            <div class="services-cell">
+                <img src="img/gallery/img5.jpg" alt="" class="services-cell_img">
+                <div class="services-cell_text">Consulting</div>
+            </div>
+            <div class="services-cell">
+                <img src="img/gallery/img6.jpg" alt="" class="services-cell_img">
+                <div class="services-cell_text">SEO</div>
+            </div>
+            <div class="services-cell">
+                <img src="img/gallery/img7.jpg" alt="" class="services-cell_img">
+                <div class="services-cell_text">Graphics Design</div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
