--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="CSS/Navstyle.css">
     <link rel="stylesheet" href="CSS/Navresponsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
 
@@ -125,6 +126,7 @@
             </div>
         </div>
     </div>
+    <script src="JS/gallery.js"></script>
 </body>
 
 </html>
